k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: findyourcar-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: findyourcar
  template:
    metadata:
      labels:
        app: findyourcar
    spec:
      containers:
        - name: findyourcar
          image: findyourcar:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: findyourcar-service
spec:
  type: NodePort
  selector:
    app: findyourcar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30036
